# python-project-49

./: Makefile  README.md  calc.cast  demo.cast  even.cast  game  gcd.cast  prime.cast  progression.cast  pyproject.toml
brain_games/: cli.py  engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.cast  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
