[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["LightFalse <Danoneover9999@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:welcome"
brain-even = "brain_games.scripts.brain_even:game"
brain-engine = "brain_games.engine:game"
brain-calc = "brain_games.games.calc:calc"


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
